kube-ingress-demo/ingress/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: example-ingress
  annotations:
    ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - http:
        paths:
          - path: /hello
            backend:
              serviceName: hello-service
              servicePort: 80
          - path: /hi
            backend:
              serviceName: hi-service
              servicePort: 80
